--- a/src/style.css
+++ b/src/style.css
@@ -4,5 +4,13 @@
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: #2c3e50;
-  margin-top: 60px;
+}
+
+#app .row {
+  display: flex;
+}
+
+#app .cell {
+  width: 1em;
+  height: 1em;
 }
