--- a/src/style.css
+++ b/src/style.css
@@ -6,11 +6,20 @@
   color: #2c3e50;
 }
 
-#app .row {
+.board {
+  display: inline-block;
+  border: 1px solid #CCC;
+}
+
+.board__row {
   display: flex;
 }
 
-#app .cell {
+.board__cell {
   width: 1em;
   height: 1em;
+}
+
+.board__cell--is-alive {
+  background-color: #2c3e50;
 }
