--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-#app {
+.board {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -6,7 +6,7 @@
   color: #2c3e50;
 }
 
-.board {
+.board__container {
   display: inline-block;
   border: 1px solid #CCC;
 }
@@ -22,4 +22,9 @@
 
 .board__cell--is-alive {
   background-color: #2c3e50;
+}
+
+.board__next-turn {
+  display: block;
+  margin: auto;
 }
