--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,18 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 .board {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  color: #2c3e50;
+  color: #34495e;
   user-select: none;
 }
 
 .board__container {
   display: inline-block;
-  border: 1px solid #CCC;
 }
 
 .board__row {
@@ -17,12 +20,38 @@
 }
 
 .board__cell {
+  position: relative;
   width: 1em;
   height: 1em;
 }
+.board__cell::before {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #ecf0f1;
+  content: '';
+}
+.board__cell::after {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  border: 1px solid #34495e;
+  background-color: #34495e;
+  content: '';
+}
+.board__cell:hover {
+  z-index: 1;
+  outline: 4px solid #e74c3c;
+}
 
-.board__cell--is-alive {
-  background-color: #2c3e50;
+.board__cell--is-alive::after {
+  opacity: 1;
+  background-color: #34495e;
 }
 
 .board__next-turn {
